[lt] lang files update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104292 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lt/mobile.lang
+++ b/lt/mobile.lang
@@ -2,130 +2,130 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Parsisiųsti „Firefox“ „Android'ams“
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Parsisiųsti į <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Nemokamai iš „Android“ krautuvės
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+Arba atverkite <a %s>Firefox.com/m</a> savo telefone.
 
 
 ;Supported Devices
-Supported Devices
+Palaikomi įrenginiai
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+Gaukite iš „iTunes“ – DYKAI
 
 
 ;Firefox Home for <span>iPhone</span>
-Firefox Home for <span>iPhone</span>
+„Firefox Home“ <span>iPhone'ams</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+Pasiekite „Firefox“ žurnalą, adresyną ir atvertas korteles savo „iPhone“ telefone.
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+Parsisiųskite „Firefox“ į <span>savo mobilųjį</span>
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+Norite išbandyti šviežiausias naujoves?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+Parsisiųskite „Firefox Home“ „iPhone'ams“
 
 
 ;Download Beta for Android
-Download Beta for Android
+Parsisiųskite betą „Andoid'ams“
 
 
 ;Download
-Download
+Parsisiųsti
 
 
 ;for
-for
+skirtą
 
 
 ;Free from iTunes
-Free from iTunes
+Nemokamai iš „iTunes“
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+Galėsite susipažinti su šviežiausiomis naujovėmis ir pateikti atsiliepimų – tuo mums padėsite išblizginti ir nupoliruoti tai, kas pateks į galutinę laidą. 
 
 
 ;Developer Tools
-Developer Tools
+Įrankiai kūrėjams
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+Mobiliąją „Firefox“ atmainą galite įdiegti į savo kompiuterį – taip galėsite ją testuoti, palikti atsiliepimų ir kurti jai priedus.
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Palaikykite su mobiliąja „Firefox“ ryšį:
 
 
 ;Monthly newsletter
-Monthly newsletter
+Mėnesinis naujienlaiškis
 
 
 ;Follow us
-Follow us
+Sekite mus
 
 
 ;Become a fan
-Become a fan
+Tapkite gerbėju
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+„Firefox“ yra pilna naujovių, kurių dėka rinkti tekstą reikės mažiau, o naršyti galėsite daugiau, sparčiau ir paprasčiau.
 
 
 ;Freedom from typing
-Freedom from typing
+Laisvė nuo teksto rinkimo
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+Pradžios ekranas įsimena Jūsų mėgiamas svetaines, tad galėsite naršyti rinkdami labai nedaug arba visai nerinkdami teksto.
 
 
 ;Best of both worlds
-Best of both worlds
+Geriausia iš abiejų pasaulių
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+„Firefox“ „Android'ams“ dabar atnaujinta ir dar labiau optimizuota naršymui telefonuose ir planšetėse.
 
 
 ;Browse quick and easy
-Browse quick and easy
+Spartus ir paprastas naršymas
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Viskas, ko reikia – sinchronizavimas, kortelės ir įrašymas į adresyną vienu spragtelėjimu – ranka pasiekiama.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Reikia pagalbos?</a> Aplankykite mobiliosios „Firefox“ palaikymo svetainę.
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Parsisiųskite ir išbandykite labiausiai Jums tinkančią versiją.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+Visi mobiliosios „Firefox“ kanalai »
 
 
