--- a/lt/newsletter.lang
+++ b/lt/newsletter.lang
@@ -1,4 +1,4 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/lt/newsletter/new
 
 
 ;Get Monthly News
@@ -62,7 +62,7 @@ Skaitykite viską apie tai mūsų <span>naujienlaiškyje</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Naujienlaiškio prenumerata Jums patvirtinta.
 
 
 ;Format
@@ -70,110 +70,110 @@ Formatas
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Viskas atlikta! <span>Bet luktelkite, yra dar kai kas</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Norite gauti labiausiai dominančią informaciją? Prisistatykite šiek tiek išsamiau, o tuo pačiu užsiprenumeruokite kitas Jus dominančias „Mozillos“ naujienas.
 
 
 ;Firefox & You
-Firefox & You
+„Firefox“ ir Tu
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Kiti mūsų naujienlaiškiai:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Reguliarūs patarimai, padėsiantys iš Jūsų mėgstamos naršyklės „išspausti“ kuo daugiau.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Mobilioji „Firefox“
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Sužinokite apie naujausius mobiliosios „Firefox“ priedus ir galimybes.
 
 
 ;Beta News
-Beta News
+Betos naujienos
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Susipažinkite su naujausiomis „Firefox“ naršyklių savybėmis prieš joms patenkant į galutinę laidą.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Draugaukime!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+„Firefox“ galite rasti ir savo mėgstamame socialiniame tinkle. Bendraukime!
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Tvarkykite savo <span>naujienlaiškių prenumeratas</span>
 
 
 ;Subscribe
-Subscribe
+Prenumeruoti
 
 
 ;Unsubscribe
-Unsubscribe
+Atsisakyti prenumeratos
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Pažymėkite, jeigu norite atsisakyti visų „Mozillos“ laiškų
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Pašalinti mane iš visų „Mozillos“ laiškų gavėjų
 
 
 ;Save Preferences
-Save Preferences
+Įrašyti nuostatas
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Jūsų el. pašto gavimo nuostatos įrašytos.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Jūsų prenumeratų atsisakyta.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Apgailestaujame, jog tenka atsisveikinti. Gal pasakytumėte, kodėl nusprendėte mus palikti?
 
 
 ;You send too many emails.
-You send too many emails.
+Gaunate per daug laiškų.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Gaunamų laiškų turinys Jums neaktualus.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Laiškų išvaizda apsunkina skaitymą.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Laiškų neprenumeravote.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Su „Mozilla“ palaikote ryšį kitais būdais - per „Facebook“ ar „Twitter“.
 
 
 ;Submit
-Submit
+Pateikti
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Dėkojame už Jūsų atsakymą.
 
 
