--- a/lt/snippets.lang
+++ b/lt/snippets.lang
@@ -82,42 +82,42 @@ Parsisiųskite „Firefox“ naršyklę į savo „Android“ planšetinį kompi
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Parsisiųskite „Firefox“ betą</a>, teikite atsiliepimus ir padėkite kitai „Firefox“ laidai dar labiau nudžiuginti visus 450 milijonų naudotojų.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Išbandykite naujoves ir padėkite jas išblizginti, kad kita „Firefox“ laida būtų geresnė nei kada nors anksčiau. Nelaukite, <a href="%">parsisiųskite „Firefox“ betą!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Patinka „Firefox“? Norite kitą jos laidą padėti paversti dar geresne? <a href="%">Parsisiųskite „Firefox“ betą</a> ir dalinkitės su mumis savo atsiliepimais!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Ar naudojatės šviežiausia „Firefox“ beta? <a href="%">Parsisiųskite ją dabar</a> ir padėkite ištestuoti šviežiausias jos naujoves.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Dar nesinaudojate šviežiausia „Firefox“ beta? <a href="%">Parsisiųskite ją dabar</a> ir susipažinkite su dar tobulinamomis būsimosios laidos naujovėmis.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Norite palikti atsiliepimą? <a href="%">Sužinokite, kaip</a> ir prisidėkite prie kitų „Firefox“ laidų gerinimo.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+„Firefox“ betos naudotojams: nepamirškite <a href="%">palikti savo atsiliepimų</a> – prisidėkite prie būsimosios „Firefox“ laidos poliravimo.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Prisidėkite prie būsimųjų „Firefox“ laidų poliravimo – <a href="%">tapkite „Firefox“ skleidėju</a> ir supažinkite su beta savo draugus.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Pasiūlykite savo draugams susipažinti su būsimųjų „Firefox“ laidų naujovėmis. <a href="%">Tapkite „Firefox“ skleidėju</a> ir supažindinkite juos su „Firefox Aurora“.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Naudojatės „Firefox“ keliuose kompiuteriuose? Dabar galite tarp jų sinchronizuoti priedus. <a href="%">Sužinokite, kaip įjungti sinchronizavimą.</a>
 
 
