--- a/lt/upgradedialog.lang
+++ b/lt/upgradedialog.lang
@@ -23,7 +23,7 @@ Dar nuostabesnė nei iki šiol
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Išleista nauja „Firefox“ laida, galinti geriau Jus apsaugoti nuo atakų tinkle.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,19 +31,19 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+šviežiausi saugumo naujinimai
 
 
 ;experience faster performance
-mėgaukitės spartesniu naršymu
+atraskite spartesnį naršymą
 
 
 ;enjoy greater customization
-enjoy greater customization
+mėgaukitės platesniu individualizavimu
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Jūsų naudojama „Firefox“ laida netrukus taps lengvu internetinių atakų taikiniu.
 
 
 ;Stay safe online
@@ -63,26 +63,26 @@ Jūsų naudojama naršyklės „Firefox“ laida Jūsų nebesaugo nuo internetin
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Šis įspėjimas – paskutinis prieš automatiškai atnaujinant Jūsų naudojamą „Firefox“ iki šviežiausios laidos
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+„Firefox“ nebepalaiko Jūsų naudojamos operacinės sistemos versijos, todėl liksite atviri atakoms tinkle.
 
 
 ;We recommend:
-We recommend:
+Rekomenduojame:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Atnaujinti <a %s>operacinę sistemą</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Parsisiųsti ją palaikančią naršyklę
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Įdiegti nemokamą <a %s>operacinės sistemos</a> naujinimą
 
 
