Mobile page updates
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104297 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lt/mobile.lang
+++ b/lt/mobile.lang
@@ -2,7 +2,7 @@
 
 
 ;Get Firefox for Android
-Parsisiųsti „Firefox“ „Android'ams“
+Parsisiųskite „Firefox“ į Android
 
 
 ;Download for <span>Android</span>
@@ -74,7 +74,7 @@ Mobiliąją „Firefox“ atmainą galite įdiegti į savo kompiuterį – taip 
 
 
 ;Connect With Firefox for Mobile:
-Palaikykite su mobiliąja „Firefox“ ryšį:
+Palaikykite su mumis ryšį:
 
 
 ;Monthly newsletter
