[lt] Mobile page update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104298 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lt/mobile.lang
+++ b/lt/mobile.lang
@@ -98,7 +98,7 @@ Laisvė nuo teksto rinkimo
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-Pradžios ekranas įsimena Jūsų mėgiamas svetaines, tad galėsite naršyti rinkdami labai nedaug arba visai nerinkdami teksto.
+Pradžios ekranas įsimena Jūsų mėgiamas svetaines, tad naršant teksto rinkti beveik nereikės.
 
 
 ;Best of both worlds
