[lt] more adjustments for Mobile
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104300 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lt/mobile.lang
+++ b/lt/mobile.lang
@@ -2,7 +2,7 @@
 
 
 ;Get Firefox for Android
-Parsisiųskite „Firefox“ į Android
+Parsisiųskite „Firefox“ <span>„A&zwnj;ndroid’ui“</spam>
 
 
 ;Download for <span>Android</span>
@@ -106,7 +106,7 @@ Geriausia iš abiejų pasaulių
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-„Firefox“ „Android'ams“ dabar atnaujinta ir dar labiau optimizuota naršymui telefonuose ir planšetėse.
+Mobilioji „Firefox“ dabar atnaujinta ir dar labiau pritaikyta naršymui telefonuose ir planšetėse.
 
 
 ;Browse quick and easy
