[lt] Even more mobile adjustments
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104301 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lt/mobile.lang
+++ b/lt/mobile.lang
@@ -26,7 +26,7 @@ Gaukite iš „iTunes“ – DYKAI
 
 
 ;Firefox Home for <span>iPhone</span>
-„Firefox Home“ <span>iPhone'ams</span>
+„Firefox Home“ <span>iPhone’ui</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
@@ -42,11 +42,11 @@ Norite išbandyti šviežiausias naujoves?
 
 
 ;Get Firefox Home for iPhone
-Parsisiųskite „Firefox Home“ „iPhone'ams“
+Parsisiųskite „Firefox Home“ „iPhone’ui“
 
 
 ;Download Beta for Android
-Parsisiųskite betą „Andoid'ams“
+Parsisiųskite betą „Andoid’ui“
 
 
 ;Download
