l10n: add last missing string in upgradedialog.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104335 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ast/upgradedialog.lang
+++ b/ast/upgradedialog.lang
@@ -30,7 +30,6 @@ There’s a new version of Firefox that can better protect you against online at
 <a %s>Get the upgrade</a> — it’s fast & free!
 
 
-
 ;get the latest in security
 get the latest in security
 
@@ -85,5 +84,9 @@ Downloading a compatible browser
 
 ;Installing a free upgrade to your <a %s>operating system</a>
 Installing a free upgrade to your <a %s>operating system</a>
+
+
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
 
 
