--- a/ca/upgradedialog.lang
+++ b/ca/upgradedialog.lang
@@ -86,3 +86,7 @@ Baixar un navegador compatible.
 Instal·lar una actualització gratuïta del <a %s>sistema operatiu</a>.
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
