--- a/cs/upgradedialog.lang
+++ b/cs/upgradedialog.lang
@@ -86,3 +86,7 @@ Stáhnout kompatibilní prohlížeč.
 Nainstalovat si zdarma aktualizaci ke svému <a %s>operačnímu systému</a>.
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
