--- a/cy/upgradedialog.lang
+++ b/cy/upgradedialog.lang
@@ -86,3 +86,7 @@ Llwytho porwr cydnaws i lawr
 Gosod diweddariad am ddim i'ch <a %s>system weithredu</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
