--- a/da/upgradedialog.lang
+++ b/da/upgradedialog.lang
@@ -86,3 +86,7 @@ At du downloader en kompatibel browser
 At du installere en gratis opgradering til dit <a %s>styresystem</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
