--- a/de/upgradedialog.lang
+++ b/de/upgradedialog.lang
@@ -86,3 +86,7 @@ Laden Sie einen kompatiblen Browser herunter
 Installieren Sie ein kostenloses Upgrade für Ihr <a %s>Betriebssystem</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
