--- a/el/upgradedialog.lang
+++ b/el/upgradedialog.lang
@@ -86,3 +86,7 @@
 Να εγκαταστήσετε μια δωρεάν αναβάθμιση του <a %s>λειτουργικού σας συστήματος</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
