--- a/es-ES/upgradedialog.lang
+++ b/es-ES/upgradedialog.lang
@@ -26,8 +26,8 @@ Más cosas alucinantes que nunca
 Hay una nueva versión de Firefox que puede protegerte mejor frente a los ataques informáticos.
 
 
-;Get the upgrade — it’s fast & free!
-Actualiza tu Firefox. ¡Es rápido y gratuito!
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Get the upgrade</a> — it’s fast & free!
 
 
 ;get the latest in security
@@ -84,3 +84,9 @@ Descargar un navegador compatible
 
 ;Installing a free upgrade to your <a %s>operating system</a>
 Instalar una actualización gratuita del <a %s>sistema operativo</a>
+
+
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
