--- a/fr/upgradedialog.lang
+++ b/fr/upgradedialog.lang
@@ -86,3 +86,7 @@ de télécharger un navigateur compatible
 d'installer une mise à jour gratuite pour votre <a %s>système d'exploitation</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
