--- a/gl/upgradedialog.lang
+++ b/gl/upgradedialog.lang
@@ -86,3 +86,7 @@ Descargar un navegador compatíbel
 Instalar unha anovación de balde para o seu <a %s>sistema operativo</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
