--- a/is/upgradedialog.lang
+++ b/is/upgradedialog.lang
@@ -85,3 +85,8 @@ Niðurhala samhæfðum vafra
 ;Installing a free upgrade to your <a %s>operating system</a>
 Setja inn ókeypis uppfærslu fyrir <a %s>stýrikerfið</a>
 
+
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
