--- a/ko/upgradedialog.lang
+++ b/ko/upgradedialog.lang
@@ -45,6 +45,7 @@ Firefox 3.6 보다 더 빠른 속도
 ;Your version of Firefox will soon be vulnerable to online attacks.
 현재 Firefox 버전은 향후 보안 취약점에 노출될 수 있습니다.
 
+
 ;Stay safe online
 더 안전한 서비스
 
@@ -83,5 +84,9 @@ Firefox는 더 이상 현재 운영 체제를 지원하지 않습니다. 향후 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
 <a %s>운영 체제</a>에 맞는 무료 업그레이드 설치 중
+
+
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
 
 
