--- a/lt/upgradedialog.lang
+++ b/lt/upgradedialog.lang
@@ -86,3 +86,7 @@ Parsisiųsti ją palaikančią naršyklę
 Įdiegti nemokamą <a %s>operacinės sistemos</a> naujinimą
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
