--- a/lv/upgradedialog.lang
+++ b/lv/upgradedialog.lang
@@ -86,3 +86,7 @@ Lejupielādēt saderīgu pārlūku
 Instalēt bezmaksas atjauninājumu jūsu <a %s>operētājsistēmai</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
