--- a/nb-NO/upgradedialog.lang
+++ b/nb-NO/upgradedialog.lang
@@ -86,3 +86,7 @@ Nedlasting av en kompatibel nettleser
 Installering av en gratis oppgradering til <a %s>operativsystemet</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
