--- a/nl/upgradedialog.lang
+++ b/nl/upgradedialog.lang
@@ -86,3 +86,7 @@ Een compatibele browser te downloaden
 Een gratis upgrade voor uw <a %s>besturingssysteem</a> te installeren
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
