--- a/pa-IN/upgradedialog.lang
+++ b/pa-IN/upgradedialog.lang
@@ -86,3 +86,7 @@
 ਤੁਹਾਡੇ <a %s>ਓਪਰੇਟਿੰਗ ਸਿਸਟਮ</a> ਲਈ ਮੁਫ਼ਤ ਅੱਪਗਰੇਡ ਇੰਸਟਾਲ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
