--- a/sl/upgradedialog.lang
+++ b/sl/upgradedialog.lang
@@ -86,3 +86,7 @@ Prenesite združljiv brskalnik
 Namestite brezplačno nadgradnjo za svoj <a %s>operacijski sistem</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
