--- a/sq/upgradedialog.lang
+++ b/sq/upgradedialog.lang
@@ -86,3 +86,7 @@ Shkarkimin e një shfletuesi të përputhshëm me të
 Instalimin te <a %s>sistemi juaj operativ</a> të një përmirësimi të lirë
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
