--- a/sv-SE/upgradedialog.lang
+++ b/sv-SE/upgradedialog.lang
@@ -86,3 +86,7 @@ Hämtar en kompatibel webbläsare
 Installerar en gratisuppgradering av ditt <a %s>operativsystem</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
