--- a/zh-TW/upgradedialog.lang
+++ b/zh-TW/upgradedialog.lang
@@ -86,3 +86,7 @@ Firefox 將不再支援您的作業系統，將會暴露於遭受線上攻擊的
 安裝您 <a %s>作業系統</a> 的免費升級套件
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
