--- a/en-GB/upgradedialog.lang
+++ b/en-GB/upgradedialog.lang
@@ -86,3 +86,5 @@ Downloading a compatible browser
 Installing a free upgrade to your <a %s>operating system</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
