--- a/eo/upgradedialog.lang
+++ b/eo/upgradedialog.lang
@@ -86,3 +86,7 @@ Elŝuti kongruan retesplorilon
 Instali senpagan ĝisdatigon por via <a %s>mastruma sistemo</a>
 
 
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
