l10n: fr, string update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104336 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/upgradedialog.lang
+++ b/fr/upgradedialog.lang
@@ -87,6 +87,6 @@ d'installer une mise à jour gratuite pour votre <a %s>système d'exploitation</
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Vous recevrez cet avertissement une dernière fois avant d'être mis à jour automatiquement
 
 
