Bug 745653 - [zh-TW] Translate strings for variants of the upgrade dialog for 3.6 users'
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104338 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/zh-TW/upgradedialog.lang
+++ b/zh-TW/upgradedialog.lang
@@ -35,7 +35,7 @@
 
 
 ;experience faster performance
-體驗更快的效能
+體驗更佳效能
 
 
 ;enjoy greater customization
@@ -51,7 +51,7 @@
 
 
 ;Enjoy new features
-體驗全新功能
+享用全新功能
 
 
 ;URGENT!
@@ -59,15 +59,15 @@
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-您所使用的 Firefox 版本將不再受到網路攻擊的保護。
+您所使用的 Firefox 版本將不再受到避免您遭受網路攻擊的保護。
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-這是在更新到最新版本前的最後通知
+這是在自動更新到最新版本前的最後通知
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox 將不再支援您的作業系統，將會暴露於遭受線上攻擊的風險當中。
+Firefox 將不再支援您的作業系統，您將會暴露於遭受線上攻擊的風險當中。
 
 
 ;We recommend:
@@ -87,6 +87,6 @@ Firefox 將不再支援您的作業系統，將會暴露於遭受線上攻擊的
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+您將會在自動更新前再被通知一次。
 
 
