Bug 745595 - [eo] Translate strings for variants of the upgrade dialog for 3.6 users'
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104339 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/eo/upgradedialog.lang
+++ b/eo/upgradedialog.lang
@@ -87,6 +87,6 @@ Instali senpagan ĝisdatigon por via <a %s>mastruma sistemo</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Vi estos pridemandita ankoraŭ unu fojon antaŭ ol esti aŭtomate ĝisdatigita.
 
 
