Hungarian translation update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104340 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hu/upgradedialog.lang
+++ b/hu/upgradedialog.lang
@@ -43,15 +43,14 @@ ismerje meg a nagyobb teljesítményt
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
-
+Ez a Firefox verzió hamarosan sebezhetővé válik az online támadásokkal szemben.
 
 ;Stay safe online
-legyen biztonságban az interneten
+Legyen biztonságban az interneten
 
 
 ;Enjoy new features
-élvezze az új funkciókat
+Élvezze az új funkciókat
 
 
 ;URGENT!
@@ -63,30 +62,27 @@ A jelenleg használt Firefox verzió nem nyújt védelmet az online támadások 
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
-
+Ez az utolsó emlékeztető mielőtt automatikusan frissítjük a legfrissebb verzióra
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+A Firefox a továbbiakban nem támogatja ezt az operációs rendszert és hamarosan sebezhetővé válik az online támadásokkal szemben.
 
 
 ;We recommend:
-We recommend:
+Javaslatunk:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Frissítse az <a %s>operációs rendszert</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Töltsön le egy kompatibilis böngészőt
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Telepítse fel az <a %s>operációs rendszer</a> ingynes frissítését
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
-
-
+Az automatikus frissítés elindítása előtt még egyszer emlékeztetni fogjuk.
