Bug 745595 - [eo] Translate strings for variants of the upgrade dialog for 3.6 users'
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104341 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/eo/upgradedialog.lang
+++ b/eo/upgradedialog.lang
@@ -35,7 +35,7 @@ havu la lastajn sekurecajn aferojn
 
 
 ;experience faster performance
-spertu pli rapida funkciado
+spertu pli rapidan funkciadon
 
 
 ;enjoy greater customization
@@ -55,7 +55,7 @@ Estu sekura en la reto
 
 
 ;URGENT!
-URĜA!
+URĜE!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
