Bug 745629: [nl] Translate strings for variants of the upgrade dialog for 3.6 users
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104342 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nl/upgradedialog.lang
+++ b/nl/upgradedialog.lang
@@ -87,6 +87,5 @@ Een gratis upgrade voor uw <a %s>besturingssysteem</a> te installeren
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
-
+Er volgt nog één herinnering voordat uw Firefox automatisch wordt bijgewerkt.
 
