--- a/ga-IE/upgradedialog.lang
+++ b/ga-IE/upgradedialog.lang
@@ -23,7 +23,7 @@ Níos fearr ná aon leagan riamh
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Leis an leagan nua de Firefox, beidh tú cosanta ar ionsaithe ar líne.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+faigh na gnéithe slándála is déanaí
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ brabhsáil níos sciobtha
 
 
 ;enjoy greater customization
-enjoy greater customization
+saincheapadh níos éasca
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Beidh do leagan de Firefox i mbaol ó ionsaithe ar líne go luath.
 
 
 ;Stay safe online
@@ -63,30 +63,30 @@ Níl an leagan de Firefox atá agat cosanta ar ionsaithe ar líne a thuilleadh.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Seo é an rabhadh deireanach sula mbeidh do bhrabhsálaí nuashonraithe go huathoibríoch.
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Ní thacaíonn Firefox le do chóras oibriúcháin a thuilleadh, agus beidh sé i mbaol ó ionsaithe ar líne.
 
 
 ;We recommend:
-We recommend:
+Molaimid:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Do <a %s>chóras oibriúcháin</a> a nuashonrú
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Brabhsáil chomhoiriúnach a íosluchtú
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Nuashonrú saor in aisce a dhéanamh ar do <a %s>chóras oibriúcháin</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Gheobhaidh tú rabhadh amháin eile, ansin beidh do bhrabhsálaí nuashonraithe go huathoibríoch.
 
 
