--- a/ko/upgradedialog.lang
+++ b/ko/upgradedialog.lang
@@ -87,6 +87,4 @@ Firefox는 더 이상 현재 운영 체제를 지원하지 않습니다. 향후 
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
-
-
+자동 업데이트 전까지 계속 표시됩니다.
