Tweaks based on context
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104346 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ga-IE/upgradedialog.lang
+++ b/ga-IE/upgradedialog.lang
@@ -67,7 +67,7 @@ Seo é an rabhadh deireanach sula mbeidh do bhrabhsálaí nuashonraithe go huath
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Ní thacaíonn Firefox le do chóras oibriúcháin a thuilleadh, agus beidh sé i mbaol ó ionsaithe ar líne.
+Ní thacaíonn Firefox le do chóras oibriúcháin a thuilleadh, agus beidh tú i mbaol ó ionsaithe ar líne.
 
 
 ;We recommend:
@@ -79,7 +79,7 @@ Do <a %s>chóras oibriúcháin</a> a nuashonrú
 
 
 ;Downloading a compatible browser
-Brabhsáil chomhoiriúnach a íosluchtú
+Brabhsálaí comhoiriúnach a íosluchtú
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
