upgradedialog.lang translation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104347 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/tr/upgradedialog.lang
+++ b/tr/upgradedialog.lang
@@ -23,7 +23,7 @@ Her zamankinden daha da şahane
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Sizi çevrimiçi saldırılara karşı daha iyi koruyabilecek daha yeni bir Firefox sürümü var.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+en yeni güvenlik güncellemelerini alın
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ daha yüksek performans elde edin
 
 
 ;enjoy greater customization
-enjoy greater customization
+daha fazla kişiselleştirmenin keyfini sürün
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Kullandığınız Firefox sürümü yakında çevrimiçi saldırılara açık kalacaktır.
 
 
 ;Stay safe online
@@ -63,30 +63,30 @@ Kullandığınız Firefox sürümü artık çevrimiçi saldırılara karşı kor
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Bu, otomatik olarak son sürüme güncelleme yapılmadan önce yapılan son hatırlatmadır
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox artık işletim sistemi sürümünüzü desteklemiyor ve çevrimiçi saldırılara açık kalacaktır.
 
 
 ;We recommend:
-We recommend:
+Önerilerimiz:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+<a %s>İşletim sisteminizi</a> yükseltin
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Uyumlu bir tarayıcı indirin
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+<a %s>İşletim sisteminizin</a> ücretsiz yükseltmesini yükleyin
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Otomatik güncellemeden önce bir kez daha uyarılacaksınız.
 
 
