--- a/es-ES/upgradedialog.lang
+++ b/es-ES/upgradedialog.lang
@@ -27,7 +27,7 @@ Hay una nueva versión de Firefox que puede protegerte mejor frente a los ataque
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Consigue la actualización</a> — ¡es rápido y gratuito!
 
 
 ;get the latest in security
@@ -87,6 +87,6 @@ Instalar una actualización gratuita del <a %s>sistema operativo</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Se le pedirá una vez más antes de actualizar automáticamente.
 
 
