[it] update all .lang files to clean up our webdashboard
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104349 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/download.lang
+++ b/it/download.lang
@@ -35,6 +35,6 @@ Benvenuto nell'unico browser <em>che ti mette al primo posto.</em>
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+Browser web Mozilla Firefox
 
 
