--- a/it/firefoxtesting.lang
+++ b/it/firefoxtesting.lang
@@ -14,7 +14,7 @@ Scarica e prova la prossima versione di Firefox. Scopri tutte le ultime innovazi
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta {ok}
 
 
 ;Firefox Beta for:
