--- a/it/survey1.lang
+++ b/it/survey1.lang
@@ -10,23 +10,23 @@ Qual è la tua fascia di età?
 
 
 ;16-24
-16-24
+16-24 {ok}
 
 
 ;25-34
-25-34
+25-34 {ok}
 
 
 ;35-44
-35-44
+35-44 {ok}
 
 
 ;45-54
-45-54
+45-54 {ok}
 
 
 ;55-64
-55-64
+55-64 {ok}
 
 
 ;65+
@@ -50,23 +50,23 @@ Quale dei seguenti browser stai utilizzando attualmente sul tuo computer desktop
 
 
 ;Apple Safari
-Apple Safari
+Apple Safari {ok}
 
 
 ;Google Chrome
-Google Chrome
+Google Chrome {ok}
 
 
 ;Microsoft Internet Explorer
-Microsoft Internet Explorer
+Microsoft Internet Explorer {ok}
 
 
 ;Mozilla Firefox
-Mozilla Firefox
+Mozilla Firefox {ok}
 
 
 ;Opera
-Opera
+Opera {ok}
 
 
 ;Another browser
@@ -202,7 +202,7 @@ Hai mai sentito parlare prima d'oggi di questi servizi di Firefox?
 
 
 ;Firefox Sync
-Firefox Sync
+Firefox Sync {ok}
 
 
 ;A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
@@ -218,7 +218,7 @@ Il browser Firefox per smartphone o tablet Android
 
 
 ;Mozilla Persona
-Mozilla Persona
+Mozilla Persona {ok}
 
 
 ;An identity system that allows you to sign in to sites using an email address you choose.
@@ -226,7 +226,7 @@ Un sistema per la gestione dell'identità sul Web che ti permette di accedere ai
 
 
 ;Mozilla Marketplace
-Mozilla Marketplace
+Mozilla Marketplace {ok}
 
 
 ;Mozilla's online store for Open Web apps
