--- a/it/upgradedialog.lang
+++ b/it/upgradedialog.lang
@@ -23,7 +23,7 @@ Sempre più straordinario
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+È disponibile una nuova versione di Firefox in grado di proteggerti al meglio da attacchi online.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+tutte le ultime novità in materia di sicurezza
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ prestazioni migliorate
 
 
 ;enjoy greater customization
-enjoy greater customization
+maggiori possibilità di personalizzazione
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+In breve tempo la tua versione di Firefox non sarà più al sicuro da attacchi online.
 
 
 ;Stay safe online
@@ -63,30 +63,30 @@ Questa versione di Firefox non è più al sicuro da attacchi online.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Questo è l'ultimo avviso prima di procedere automaticamente con l'aggiornamento all'ultima versione
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox non è più compatibile con la tua versione del sistema operativo e non sarà più al sicuro da attacchi online.
 
 
 ;We recommend:
-We recommend:
+Ti consigliamo di:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Aggiornare il tuo <a %s>sistema operativo</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Installare un browser compatibile
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Installare un aggiornamento gratuito per il tuo <a %s>sistema operativo</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Ti verrà chiesto ancora una volta di aggiornare prima di procedere automaticamente con l'aggiornamento.
 
 
