--- a/it/newsletter.lang
+++ b/it/newsletter.lang
@@ -50,130 +50,130 @@ Non vediamo l'ora di condividere con te suggerimenti e trucchi per ottenere il m
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Iscriviti agli aggiornamenti mensili con le ultime notizie dal mondo Mozilla, inclusi trucchi e suggerimenti per ottenere il massimo da Firefox. È il modo perfetto per rimanere in contatto con noi.
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Ti abbiamo inviato una e-mail di conferma. Fai clic sul link presente nel messaggio per confermare la tua iscrizione a questa mailing list.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Scopri tutti i dettagli nella nostra <span>newsletter</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+La tua iscrizione alla newsletter è stata confermata.
 
 
 ;Format
-Format
+Formato
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+È tutto pronto. <span>Però aspetta, c'è dell'altro</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Vuoi ricevere informazioni più rilevanti? Dicci qualcosa di più su di te. Se vuoi puoi iscriverti anche ad altre notizie dal mondo Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & You {ok}
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Le nostre altre newsletter:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Trucchi e consigli per ottenere il massimo dal tuo browser preferito.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Scopri i componenti aggiuntivi e le caratteristiche più popolari di Firefox Mobile.
 
 
 ;Beta News
-Beta News
+Beta News {ok}
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Scopri tutte le novità di Firefox, sia in versione per computer sia per cellulari, prima della versione finale.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Diventiamo amici
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox è presente in tutti i tuoi social network preferiti. Diventa nostro amico e unisciti alla conversazione.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Gestisci le tue <span>iscrizioni alle newsletter</span>
 
 
 ;Subscribe
-Subscribe
+Iscriviti
 
 
 ;Unsubscribe
-Unsubscribe
+Annulla iscrizione
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Fai clic qui per rimuovere il tuo indirizzo da tutte le e-mail Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Rimuovimi da tutte le e-mail Mozilla
 
 
 ;Save Preferences
-Save Preferences
+Salva preferenze
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Ti ringraziamo per aver aggiornato le tue preferenze e-mail.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+La tua iscrizione è stata annullata.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Ci dispiace per la tua decisione. Puoi spiegarci le motivazioni della tua scelta?
 
 
 ;You send too many emails.
-You send too many emails.
+Mi inviate troppe e-mail.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+I contenuti non mi interessavano.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Il design delle e-mail era troppo difficile da leggere.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Non ho mai chiesto di ricevere queste e-mail.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Preferisco seguire Mozilla su Facebook e Twitter.
 
 
 ;Submit
-Submit
+Invia
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Ti ringraziamo per averci spiegato i motivi della tua decisione.
 
 
