--- a/it/snippets.lang
+++ b/it/snippets.lang
@@ -82,42 +82,42 @@ Installa Firefox sul tuo tablet Android e e sfrutta a pieno le potenzialità del
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Installa Firefox Beta</a>, facci conoscere la tua opinione e aiutaci a migliorare l'esperienza di 450 milioni di utilizzatori di Firefox.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Prova le nuove caratteristiche, aiutaci a perfezionarle per fare in modo che la prossima versione sia la migliore di sempre. <a href="%">Installa subito Firefox Beta</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Ti piace Firefox? Vuoi aiutarci a rendere la prossima versione ancora migliore? <a href="%">Installa Firefox Beta</a> e facci conoscere la tua opinione oggi stesso.
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Stai già utilizzando l'ultima versione di Firefox Beta? <a href="%">Scaricala subito</a> e aiutaci a provare le ultime novità.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Non stai utilizzando l'ultima versione di Firefox Beta? <a href="%">Scaricala subito</a> e scopri a cosa stiamo lavorando per la prossima versione.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Vuoi farci conoscere la tua opinione? <a href="%">Scopri come farlo</a> e aiutaci a rendere la nuova versione di Firefox ancora migliore.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Stai utilizzando Firefox Beta? Non dimenticare di <a href="%">farci conoscere la tua opinione</a> per aiutarci a sistemare gli ultimi dettagli della prossima versione.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Aiutaci a rendere la prossima versione di Firefox la migliore di sempre. <a href="%">Diventa un nostro sostenitore</a> e condividi Firefox Beta con i tuoi amici.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Invita i tuoi amici a scoprire le novità di Firefox in arrivo. <a href="%">Diventa un nostro sostenitore</a> e condividi Firefox Aurora oggi stesso.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Utilizzi Firefox su diversi computer? Ora puoi sincronizzare anche i componenti aggiuntivi. <a href="%">Scopri come attivare Sync.</a>
 
 
